--- a/app/views/goods/modals/_new_movement.html.erb
+++ b/app/views/goods/modals/_new_movement.html.erb
@@ -7,19 +7,19 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <%= form_with(model: [good, Movement.new], remote: true, id: 'movement-form') do |form| %>
+      <%= form_with(model: [good, Movement.new], remote: true, id: 'movement-form', class: 'needs-validation', html: { novalidate: :true }) do |form| %>
         <div class="modal-body">
           <div class="form-group">
             <%= form.label :date %>
-            <%= datepicker_field(form, :date) %>
+            <%= datepicker_field(form, :date, { required: true }) %>
           </div>
           <div class="form-group">
             <%= form.label :department_id %>
-            <%= form.select :department_id, grouped_options_for_select(departments), { prompt: :prompt_text }, class: 'form-control' %>
+            <%= form.select :department_id, grouped_options_for_select(departments), { prompt: :prompt_text }, class: 'form-control', required: true %>
           </div>
           <div class="form-group">
             <%= form.label :movement_kind_id %>
-            <%= form.select :movement_kind_id, movement_kids, { prompt: :prompt_text }, class: 'form-control' %>
+            <%= form.select :movement_kind_id, movement_kids, { prompt: :prompt_text }, class: 'form-control', required: true %>
           </div>
         </div>
         <div class="modal-footer">
@@ -44,5 +44,24 @@
         console.log(xhr.responseText)
       });
     });
+  </script>
+  <script>
+    (function() {
+    'use strict';
+    window.addEventListener('load', function() {
+      // Fetch all the forms we want to apply custom Bootstrap validation styles to
+      var forms = document.getElementsByClassName('needs-validation');
+      // Loop over them and prevent submission
+      var validation = Array.prototype.filter.call(forms, function(form) {
+        form.addEventListener('submit', function(event) {
+          if (form.checkValidity() === false) {
+            event.preventDefault();
+            event.stopPropagation();
+          }
+          form.classList.add('was-validated');
+        }, false);
+      });
+    }, false);
+    })();
   </script>
 </div>
